--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: rgb(128, 217, 245);
+}
+
 
 .wrapper{
     max-width: 100%;
@@ -32,5 +36,14 @@ button {
     /* background-color: transparent; */
     border: none;
     cursor: pointer;
+}
+
+input[type="date"]{
+    background-color: aqua;
+    color:
+    border: none;
+    border-radius: 9999px;
+    padding: 5px 15px;
+    opacity: 0.5;
 }
 
