--- a/styles/style.css
+++ b/styles/style.css
@@ -96,11 +96,36 @@ input[type="date"]{
     font-size: 2em;
 }
 
+
+
 .schedule-out {
+    /* visibility: hidden; */
     background-color: rgb(192, 2, 12);
-    width: 100%;
+    width: auto;
     height: 100%;
     color: #fff;
-
 }
+
+
+.for-test {
+    background-color: rgb(192, 2, 12);
+    margin: 10px;
+    padding: 10px;
+    width: auto;
+    height: 100%;
+    color: #fff;
+}
+
+.table-out {
+    border: 5px double #000;
+}
+
+th {
+    border: 1px solid #fff;
+}
+
+td {
+    border: 1px solid #fff;
+}
+
 
