--- a/styles/style.css
+++ b/styles/style.css
@@ -129,10 +129,10 @@ td {
 }
 
 
-.tbody-out {
+/* .tbody-out {
     display: flex;
     justify-content: end;
     margin-left: 50px;
     width: 750px;
-}
+} */
 
