--- a/styles/style.css
+++ b/styles/style.css
@@ -115,6 +115,7 @@ input[type="date"]{
 
 
 .for-test {
+    visibility: hidden;
     background-color: rgb(192, 2, 12);
     margin: 10px;
     padding: 10px;
